Fix copyright of file

--- a/azure-pipelines/templates/basic-setup-steps.yml
+++ b/azure-pipelines/templates/basic-setup-steps.yml
@@ -3,7 +3,7 @@
 # job template for basic setup for building
 # and testing pip module
 #
-# Copyright (c) 2019, Microsoft Corporation
+# Copyright (c) Microsoft Corporation
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 parameters:
