--- a/azure-pipelines/templates/basic-setup-steps.yml
+++ b/azure-pipelines/templates/basic-setup-steps.yml
@@ -1,9 +1,9 @@
 # File basic-setup-steps.yml
 #
-# job template for basic setup for building 
+# job template for basic setup for building
 # and testing pip module
 #
-# Copyright (c) 2019, Microsoft Corporation
+# Copyright (c) Microsoft Corporation
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 parameters:
@@ -12,10 +12,10 @@ parameters:
 steps:
 - checkout: self
   clean: true
-  
+
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.7.x'
+    versionSpec: '3.8.x'
     architecture: 'x64'
 
 - script: pip install --upgrade -r requirements.txt
