added upload to codecov.io

--- a/azure-pipelines/templates/pytest-test-steps.yml
+++ b/azure-pipelines/templates/pytest-test-steps.yml
@@ -31,6 +31,10 @@ steps:
   continueOnError: true
   condition: succeededOrFailed()
 
+- task: Bash@3
+  targetType: inline
+  script: <(curl -s https://codecov.io/bash) -f $(System.DefaultWorkingDirectory)/cov.xml
+
 # Publish Cobertura code coverage results
 - task: PublishCodeCoverageResults@1
   inputs:
