Added working directory

--- a/azure-pipelines/templates/pytest-test-steps.yml
+++ b/azure-pipelines/templates/pytest-test-steps.yml
@@ -35,6 +35,7 @@ steps:
   displayName: 'Upload Coverage to codecov.io'
   inputs:
     targetType: inline
+    workingDirectory: $(System.DefaultWorkingDirectory)
     script: <(curl -s https://codecov.io/bash) -f $(System.DefaultWorkingDirectory)/cov.xml -v
 
 # Publish Cobertura code coverage results
