added documentation and conditional to pipeline

--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -10,6 +10,7 @@ parameters:
   pypi_auth_feed: ''  # set this for a release
   root_package_folder: '' # set this to root package
   name: '' #set the job name
+  codecov_enabled: false # by default, we don't do codecoverage
 
 jobs:
 
@@ -27,6 +28,7 @@ jobs:
   - template: pytest-test-steps.yml
     parameters: 
       root_package_folder: ${{parameters.root_package_folder}}
+      codecov_enabled: ${{parameters.codecov_enabled}}
 
   - template: flake8-test-steps.yml
 
