fixed flake issues

--- a/azure-pipelines/templates/pytest-test-steps.yml
+++ b/azure-pipelines/templates/pytest-test-steps.yml
@@ -33,7 +33,7 @@ steps:
   condition: succeededOrFailed()
 
 - script: |
-    curl -s https://codecov.io/bash | bash -s -- -C $(Build.SourceVersion)
+    curl -s https://codecov.io/bash | bash -s -- -C $(Build.SourceVersion) -F $(Agent.OS)
   displayName: 'Upload to codecov.io'
   continueOnError: true
   condition: ${{parameters.codecov_enabled}}
