--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,15 @@
-exclude *.yml
-exclude *.md
-exclude *.txt
+exclude *.md *.txt *.yml
+exclude *.png
+exclude *.py
+exclude codecov.yaml
+prune azure-pipelines
+prune .github
+prune docs
+# Lets keep the tests - prune edk2toolext/tests
+exclude .cspell.json
 exclude .flake8
 exclude .coveragerc
 exclude .gitignore
 include edk2toolext/bin/NuGet.exe
+include readme.md
+include setup.py
