--- a/azure-pipelines/azure-pipelines-release.yml
+++ b/azure-pipelines/azure-pipelines-release.yml
@@ -20,3 +20,7 @@ jobs:
     pypi_auth_feed: 'Pypi-edk2-pytool-extensions'
     root_package_folder: "edk2toolext"
     name: 'windows'
+
+- template: template/auto-doc-job.yml # make sure this runs after this
+  parameters:
+    vm_image: 'windows-latest'
