--- a/edk2toolext/SBAT/tests/test1/VERSIONINFO.rc
+++ b/edk2toolext/SBAT/tests/test1/VERSIONINFO.rc
@@ -15,6 +15,8 @@ FileSubtype	VFT2_DRV_SYSTEM
 BEGIN
 	BLOCK "StringFileInfo"
 	BEGIN
+		BLOCK "040904b0"
+        BEGIN
 		VALUE "Comments",	"OSR Driver"
 		VALUE "CompanyName",	"OSR Open Systems Resources, Inc."
 		VALUE "FileDescription",	"OSR Driver"
@@ -24,6 +26,7 @@ BEGIN
 		VALUE "OriginalFilename",	"OSRDRV.sys"
 		VALUE "ProductName",	"OSR Driver"
 		VALUE "ProductVersion",	"1.0.0.0"
+		END
 	END
 
 	BLOCK "VarFileInfo"
