--- a/edk2toolext/SBAT/tests/test1/VERSIONINFO.rc
+++ b/edk2toolext/SBAT/tests/test1/VERSIONINFO.rc
@@ -16,7 +16,7 @@ BEGIN
 	BLOCK "StringFileInfo"
 	BEGIN
 		BLOCK "040904b0"
-        BEGIN
+		BEGIN
 		VALUE "Comments",	"OSR Driver"
 		VALUE "CompanyName",	"OSR Open Systems Resources, Inc."
 		VALUE "FileDescription",	"OSR Driver"
@@ -29,9 +29,7 @@ BEGIN
 		END
 	END
 
-	BLOCK "VarFileInfo"
-	BEGIN
-		VALUE "Translation",	"0x0409 0x04b0"
+		VALUE "Translation",	0x0409,0x04b0
 	END
 END
 #endif
