--- a/azure-pipelines/ubuntu-test-pr-ci.yml
+++ b/azure-pipelines/ubuntu-test-pr-ci.yml
@@ -23,4 +23,4 @@ jobs:
     windres_install:
     - script: sudo apt-get install gcc-mingw-w64-x86-64
       displayName: Install windres
-      #condition: and(gt(variables.pkg_count, 0), succeeded())
+      condition: and(gt(variables.pkg_count, 0), succeeded())
