--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -6,15 +6,11 @@
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 parameters:
-- vm_image: ''
+  vm_image: ''
   pypi_auth_feed: ''  # set this for a release
   root_package_folder: '' # set this to root package
   name: '' #set the job name
   codecov_enabled: false # by default, we don't do codecoverage
-
-- name: extra_steps
-  type: stepList
-  default: []
 
 jobs:
 
@@ -28,7 +24,7 @@ jobs:
 
   steps:
   - template: basic-setup-steps.yml
-  - ${{ parameters.extra_steps }}
+  - ${{ parameters[extra_steps] }}
   - template: pytest-test-steps.yml
     parameters: 
       root_package_folder: ${{parameters.root_package_folder}}
