--- a/azure-pipelines/ubuntu-test-pr-ci.yml
+++ b/azure-pipelines/ubuntu-test-pr-ci.yml
@@ -21,6 +21,6 @@ jobs:
     name: 'ubuntu'
     codecov_enabled: true
     extra_steps:
-    - script: sudo apt-get install gcc-mingw-w64-x86-64
+    - script: sudo apt-get install mingw-w64
       displayName: Install windres
       condition: and(gt(variables.pkg_count, 0), succeeded())
