Add markdown lint support and ci

--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -26,13 +26,15 @@ jobs:
   - template: basic-setup-steps.yml
 
   - template: pytest-test-steps.yml
-    parameters: 
+    parameters:
       root_package_folder: ${{parameters.root_package_folder}}
       codecov_enabled: ${{parameters.codecov_enabled}}
 
   - template: flake8-test-steps.yml
 
   - template: spell-test-steps.yml
+
+  - template: markdown-lint-steps.yml
 
   - task: PythonScript@0
     inputs:
