--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -18,7 +18,11 @@ jobs:
         Image: 'windows-latest'
         NeedQemu: 0
       EDK2:
-        Tag: 'Edk2'
+        Tag: 'Edk2NOTQEMU'
+        Image: 'windows-latest'
+        NeedQemu: 0
+      EDK2_OVMF:
+        Tag: 'Edk2&QEMU'
         Image: 'windows-latest'
         NeedQemu: 1
 
@@ -46,6 +50,12 @@ jobs:
   - powershell: choco install qemu; Write-Host "##vso[task.prependpath]c:\Program Files\qemu"
     displayName: Install QEMU and Set QEMU on path # friendly name displayed in the UI
     condition: and(gt(variables.NeedQemu, 0), succeeded())
+
+  - script: git config --global user.email "you@example.com"
+    displayName: Configure git user user.email
+
+  - script: git config --global user.name "Your Name"
+    displayName: Configure git user user.name
 
   - script: python -m robot.run -v TEST_OUTPUT_BASE:$(Build.BinariesDirectory) -d report --include $(Tag) -L TRACE .
     displayName: 'Run Robot Tests'
@@ -77,5 +87,5 @@ jobs:
     inputs:
       testResultsFiles: output.xml
       searchFolder: 'integration_test/report'
-      condition: succeededOrFailed()
-      displayName: 'Publish Test Results'
+    condition: succeededOrFailed()
+    displayName: 'Publish Test Results'
