Change Tag to use AND instead of & to avoid shell issues

--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -22,7 +22,7 @@ jobs:
         Image: 'windows-latest'
         NeedQemu: 0
       EDK2_OVMF:
-        Tag: 'Edk2&QEMU'
+        Tag: 'Edk2ANDQEMU'
         Image: 'windows-latest'
         NeedQemu: 1
 
