Move windows vm to windows-2019 until VS2022 is confirmed to work

--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -15,13 +15,13 @@ jobs:
     matrix:
       PROJECT_MU:
         Tag: 'ProjectMu'
-        Image: 'windows-latest'
+        Image: 'windows-2019'
       EDK2:
         Tag: 'Edk2NOTQEMU'
-        Image: 'windows-latest'
+        Image: 'windows-2019'
       EDK2_OVMF:
         Tag: 'Edk2ANDQEMU'
-        Image: 'windows-latest'
+        Image: 'windows-2019'
 
   workspace:
     clean: all
