--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -15,13 +15,13 @@ jobs:
     matrix:
       PROJECT_MU:
         Tag: 'ProjectMu'
-        Image: 'windows-2019'
+        Image: 'windows-latest'
       EDK2:
         Tag: 'Edk2NOTQEMU'
-        Image: 'windows-2019'
+        Image: 'windows-latest'
       EDK2_OVMF:
         Tag: 'Edk2ANDQEMU'
-        Image: 'windows-2019'
+        Image: 'windows-latest'
 
   workspace:
     clean: all
