Only ProjectMu supports VS2022

--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -18,10 +18,10 @@ jobs:
         Image: 'windows-latest'
       EDK2:
         Tag: 'Edk2NOTQEMU'
-        Image: 'windows-latest'
+        Image: 'windows-2019'
       EDK2_OVMF:
         Tag: 'Edk2ANDQEMU'
-        Image: 'windows-latest'
+        Image: 'windows-2019'
 
   workspace:
     clean: all
