--- a/azure-pipelines/templates/spell-test-steps.yml
+++ b/azure-pipelines/templates/spell-test-steps.yml
@@ -15,7 +15,7 @@ steps:
   inputs:
     versionSpec: '18.x'
 
-- script: npm install -g cspell
+- script: npm install -g cspell@5.20.0
   displayName: 'Install cspell npm'
 
 - script: cspell -c .cspell.json "**/*.py" "**/*.md"
