--- a/azure-pipelines/templates/spell-test-steps.yml
+++ b/azure-pipelines/templates/spell-test-steps.yml
@@ -13,9 +13,9 @@ parameters:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '12.x'
+    versionSpec: '18.x'
 
-- script: npm install -g cspell
+- script: npm install -g cspell@5.20.0
   displayName: 'Install cspell npm'
 
 - script: cspell -c .cspell.json "**/*.py" "**/*.md"
