Add Pydocstyle linting requirements
Adds Pydocstyle linting requirements using the google convention by
adding this linting to the PR gate. Updates developing.md documentation
and adds Pydocstyle linting to the vscode settings.

--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -33,6 +33,8 @@ jobs:
 
   - template: flake8-test-steps.yml
 
+  - template: pydocstyle-test-steps.yml
+
   - template: spell-test-steps.yml
 
   - template: markdown-lint-steps.yml
