--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pytest == 7.1.2
 pytest-html == 3.1.1
 pytest-cov == 3.0.0
 flake8 == 5.0.4
+pydocstyle == 6.1.1
 pyopenssl == 22.0.0
 pefile == 2022.5.30
 semantic_version == 2.10.0
