--- a/azure-pipelines/templates/pydocstyle-test-steps.yml
+++ b/azure-pipelines/templates/pydocstyle-test-steps.yml
@@ -10,12 +10,14 @@ parameters:
   none: ''
   
 steps:
-- script: pydocstyle $(root_package_folder)
+- script: pydocstyle .
+  workingDirectory: $(root_package_folder)/
   displayName: 'Run pydocstyle'
   condition: succeededOrFailed()
 
 # Only capture and archive the lint log on failures.
 - script: pydocstyle . > pydocstyle.err.log
+  workingDirectory: $(root_package_folder)/
   displayName: 'Capture pydocstyle failures'
   condition: Failed()
 
