Test package on last three python minor versions
Enables the pipeline to test the last three python minor versions rather
then only the most current minor version.

Signed-off-by: Joey Vagedes <joeyvagedes@microsoft.com>

--- a/azure-pipelines/templates/basic-setup-steps.yml
+++ b/azure-pipelines/templates/basic-setup-steps.yml
@@ -7,7 +7,7 @@
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 ##
 parameters:
-  none: ''
+  python_version: ''
 
 steps:
 - checkout: self
@@ -15,7 +15,7 @@ steps:
 
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '3.10.x'
+    versionSpec: ${{ parameters.python_version }}
     architecture: 'x64'
 
 - script: pip install --upgrade -r requirements.txt
