--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -9,19 +9,47 @@
 
 jobs:
 - job: Integration_Test
-
+  parameters:
+    PythonVersion: ['3.9.x', '3.10.x', '3.11.x']
   #Use matrix to speed up the build process
   strategy:
     matrix:
-      PROJECT_MU:
+      PROJECT_MU_PY_3_9:
         Tag: 'ProjectMu'
         Image: 'windows-2022'
-      EDK2:
+        PythonVersion: ${{parameters.PythonVersion[0]}}
+      PROJECT_MU_PY_3_10:
+        Tag: 'ProjectMu'
+        Image: 'windows-2022'
+        PythonVersion: ${{parameters.PythonVersion[1]}}
+      PROJECT_MU_PY_3_11:
+        Tag: 'ProjectMu'
+        Image: 'windows-2022'
+        PythonVersion: ${{parameters.PythonVersion[2]}}      
+      EDK2_PY_3_9:
         Tag: 'Edk2NOTQEMU'
         Image: 'windows-2019'
-      EDK2_OVMF:
+        PythonVersion: ${{parameters.PythonVersion[0]}}
+      EDK2_PY_3_10:
+        Tag: 'Edk2NOTQEMU'
+        Image: 'windows-2019'
+        PythonVersion: ${{parameters.PythonVersion[1]}}
+      EDK2_PY_3_11:
+        Tag: 'Edk2NOTQEMU'
+        Image: 'windows-2019'
+        PythonVersion: ${{parameters.PythonVersion[2]}}
+      EDK2_OVMF_PY_3_9:
         Tag: 'Edk2ANDQEMU'
         Image: 'windows-2019'
+        PythonVersion: ${{parameters.PythonVersion[0]}}
+      EDK2_OVMF_PY_3_10:
+        Tag: 'Edk2ANDQEMU'
+        Image: 'windows-2019'
+        PythonVersion: ${{parameters.PythonVersion[1]}}
+      EDK2_OVMF_PY_3_11:
+        Tag: 'Edk2ANDQEMU'
+        Image: 'windows-2019'
+        PythonVersion: ${{parameters.PythonVersion[2]}}
 
   workspace:
     clean: all
