--- a/azure-pipelines/windows-test-pr-ci.yml
+++ b/azure-pipelines/windows-test-pr-ci.yml
@@ -19,4 +19,9 @@ jobs:
     root_package_folder: "edk2toolext"
     name: 'windows'
     codecov_enabled: true
-    python_minor_versions: ['9', '10', '11']
+    python_versions:
+      # Job Titles cannot have periods, so we iterate
+      # With a map using entry.key and entry.value
+      '3_9': 3.9
+      '3_10': 3.10
+      '3_11': 3.11
