--- a/azure-pipelines/templates/build-test-job.yml
+++ b/azure-pipelines/templates/build-test-job.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
     - template: basic-setup-steps.yml
       parameters:
-        python_version: ${{py_ver.value}}
+        python_version: '${{py_ver.value}}'
 
     - ${{ parameters.extra_steps }}
     
