--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -24,15 +24,15 @@ jobs:
         PROJECT_MU_PY_${{PyVer.key}}:
           Tag: 'ProjectMu'
           Image: 'windows-2022'
-          PythonVersion: ${{PyVer.value}}
+          PythonVersion: '${{PyVer.value}}'
         EDK2_PY_${{PyVer.key}}:
           Tag: 'Edk2NOTQEMU'
           Image: 'windows-2019'
-          PythonVersion: ${{PyVer.value}}
+          PythonVersion: '${{PyVer.value}}'
         EDK2_OVMF_PY_${{PyVer.key}}:
           Tag: 'Edk2ANDQEMU'
           Image: 'windows-2019'
-          PythonVersion: ${{PyVer.value}}
+          PythonVersion: '${{PyVer.value}}'
 
   workspace:
     clean: all
