--- a/integration_test/azure-pipelines/windows-robot-integration-test.yml
+++ b/integration_test/azure-pipelines/windows-robot-integration-test.yml
@@ -11,6 +11,8 @@ parameters:
 - name: PythonMinorVersionList
   type: object
   default:
+    # Job Titles cannot have periods, so we iterate
+    # With a map using entry.key and entry.value
     '3_9': '3.9'
     '3_10': '3.10'
     '3_11': '3.11'
