--- a/azure-pipelines/azure-pipelines-release.yml
+++ b/azure-pipelines/azure-pipelines-release.yml
@@ -20,3 +20,5 @@ jobs:
     pypi_auth_feed: 'Pypi-edk2-pytool-extensions'
     root_package_folder: "edk2toolext"
     name: 'windows'
+    python_versions:
+      '3_11': 3.11
